Commit: chỉnh sửa lại User-manual + testing-guide + troubleshooting-release + class-diagram